disks/pc/dos/microsoft/6.22/1440K/README.md
---
layout: page
title: Microsoft MS-DOS 6.22 (1.44M Disks)
permalink: /disks/pc/dos/microsoft/6.22/1440K/
---

Microsoft MS-DOS 6.22 (1.44M Disks)
---

### Directory of MS-DOS 6.22 (1.44M Disk 1)

	 Volume in drive A is DISK      1
	 Volume Serial Number is 1C2A-0D0F

	Directory of A:\

	IO       SYS     40774 05-31-94   6:22a
	MSDOS    SYS     38138 05-31-94   6:22a
	COMMAND  COM     54645 05-31-94   6:22a
	ATTRIB   EXE     11208 05-31-94   6:22a
	AUTOEXEC BAT        37 05-31-94   6:22a
	CHKDSK   EXE     12241 05-31-94   6:22a
	CONFIG   SYS        13 05-31-94   6:22a
	COUNTRY  SYS     26936 05-31-94   6:22a
	COUNTRY  TX_      5241 05-31-94   6:22a
	DEBUG    EXE     15718 05-31-94   6:22a
	DEFRAG   EXE     79065 05-31-94   6:22a
	DEFRAG   HL_      4284 05-31-94   6:22a
	DOSSETUP INI      3114 05-31-94   6:22a
	DRVSPACE BIN     66294 05-31-94   6:22a
	EDIT     COM       413 05-31-94   6:22a
	EGA      CP_     18340 05-31-94   6:22a
	EGA2     CP_     19049 05-31-94   6:22a
	EGA3     CP_     15558 05-31-94   6:22a
	EMM386   EX_     50058 05-31-94   6:22a
	EXPAND   EXE     16129 05-31-94   6:22a
	FDISK    EXE     29336 05-31-94   6:22a
	FORMAT   COM     22974 05-31-94   6:22a
	ISO      CP_     15240 05-31-94   6:22a
	KEYB     COM     15750 05-31-94   6:22a
	KEYBOARD SYS     34598 05-31-94   6:22a
	KEYBRD2  SY_     11759 05-31-94   6:22a
	MEM      EX_     19512 05-31-94   6:22a
	MSCDEX   EXE     25361 05-31-94   6:22a
	NETWORKS TXT     17465 05-31-94   6:22a
	NLSFUNC  EXE      7036 05-31-94   6:22a
	PACKING  LST      6237 05-31-94   6:22a
	QBASIC   EXE    194309 05-31-94   6:22a
	README   TXT     60646 05-31-94   6:22a
	REPLACE  EX_     12835 05-31-94   6:22a
	RESTORE  EX_     23380 05-31-94   6:22a
	SCANDISK EXE    124262 05-31-94   6:22a
	SCANDISK INI      6920 05-31-94   6:22a
	SETUP    EXE     72842 05-31-94   6:22a
	SETUP    MSG      1830 05-31-94   6:22a
	SYS      COM      9432 05-31-94   6:22a
	XCOPY    EX_     11093 05-31-94   6:22a
	       41 file(s)    1200072 bytes

	Total files listed:
	       41 file(s)    1200072 bytes
	                      247296 bytes free

### Directory of MS-DOS 6.22 (1.44M Disk 2)

	 Volume in drive A is DISK      2
	 Volume Serial Number is 332B-240B

	Directory of A:\

	ANSI     SY_      6261 05-31-94   6:22a
	APPEND   EX_      7467 05-31-94   6:22a
	CHKSTATE SY_     16770 05-31-94   6:22a
	CHOICE   COM      1754 05-31-94   6:22a
	DBLWIN   HL_      5087 05-31-94   6:22a
	DELTREE  EX_      7249 05-31-94   6:22a
	DISKCOMP CO_      6762 05-31-94   6:22a
	DISKCOPY CO_      8306 05-31-94   6:22a
	DISPLAY  SY_      9797 05-31-94   6:22a
	DOSHELP  HL_      2576 05-31-94   6:22a
	DOSKEY   CO_      4213 05-31-94   6:22a
	DRIVER   SY_      4032 05-31-94   6:22a
	DRVSPACE EXE    181840 05-31-94   6:22a
	DRVSPACE HL_     28521 05-31-94   6:22a
	DRVSPACE IN_      1272 05-31-94   6:22a
	DRVSPACE SY_      8518 05-31-94   6:22a
	DRVSPACE TX_     13210 05-31-94   6:22a
	EDIT     HL_     15709 05-31-94   6:22a
	FASTHELP EX_      7539 05-31-94   6:22a
	FASTOPEN EX_      7829 05-31-94   6:22a
	FC       EX_     12065 05-31-94   6:22a
	FIND     EX_      4879 05-31-94   6:22a
	GRAPHICS CO_     11376 05-31-94   6:22a
	GRAPHICS PR_      3883 05-31-94   6:22a
	HELP     COM       413 05-31-94   6:22a
	HELP     HL_    270925 05-31-94   6:22a
	HIMEM    SY_     10064 05-31-94   6:22a
	INTERLNK EX_     10720 05-31-94   6:22a
	INTERSVR EX_     26446 05-31-94   6:22a
	LABEL    EX_      6176 05-31-94   6:22a
	LOADFIX  CO_       649 05-31-94   6:22a
	MEMMAKER EXE    119557 05-31-94   6:22a
	MEMMAKER HL_      6017 05-31-94   6:22a
	MEMMAKER IN_      1306 05-31-94   6:22a
	MODE     CO_     14899 05-31-94   6:22a
	MONOUMB  38_       950 05-31-94   6:22a
	MORE     COM      2545 05-31-94   6:22a
	MOVE     EX_     11957 05-31-94   6:22a
	MSBACKUP EX_      2487 05-31-94   6:22a
	MSBCONFG HL_     18549 05-31-94   6:22a
	MSBCONFG OVL     47210 05-31-94   6:22a
	MSD      EXE    165864 05-31-94   6:22a
	MSTOOLS  DL_      8665 05-31-94   6:22a
	MWBACKR  DL_     30406 05-31-94   6:22a
	POWER    EX_      5549 05-31-94   6:22a
	PRINT    EX_      9618 05-31-94   6:22a
	QBASIC   HL_    113105 05-31-94   6:22a
	RAMDRIVE SY_      3282 05-31-94   6:22a
	SETVER   EX_      6617 05-31-94   6:22a
	SHARE    EX_      8120 05-31-94   6:22a
	SIZER    EX_      4136 05-31-94   6:22a
	SMARTDRV EX_     15480 05-31-94   6:22a
	SMARTMON EX_     13747 05-31-94   6:22a
	SMARTMON HL_      7319 05-31-94   6:22a
	SORT     EX_      4360 05-31-94   6:22a
	SUBST    EX_     12741 05-31-94   6:22a
	TREE     CO_      4795 05-31-94   6:22a
	UNFORMAT COM     12738 05-31-94   6:22a
	VFINTD   38_      1289 05-31-94   6:22a
	WINA20   38_      2661 05-31-94   6:22a
	       60 file(s)    1358277 bytes

	Total files listed:
	       60 file(s)    1358277 bytes
	                       84992 bytes free

### Directory of MS-DOS 6.22 (1.44M Disk 3)

	 Volume in drive A is DISK      3
	 Volume Serial Number is 4509-0E0F

	Directory of A:\

	MSAV     EXE    172198 05-31-94   6:22a
	MSAV     HL_     12230 05-31-94   6:22a
	MSAVHELP OV_     17796 05-31-94   6:22a
	MSAVIRUS LS_     11473 05-31-94   6:22a
	MSBACKDB OVL     63994 05-31-94   6:22a
	MSBACKDR OVL     68074 05-31-94   6:22a
	MSBACKFB OVL     69530 05-31-94   6:22a
	MSBACKFR OVL     73706 05-31-94   6:22a
	MSBACKUP HL_    112396 05-31-94   6:22a
	MSBACKUP OVL    133936 05-31-94   6:22a
	MWAV     EX_     65629 05-31-94   6:22a
	MWAV     HL_     12070 05-31-94   6:22a
	MWAVABSI DL_     23085 05-31-94   6:22a
	MWAVDLG  DL_     10232 05-31-94   6:22a
	MWAVDOSL DL_     19702 05-31-94   6:22a
	MWAVDRVL DL_      4219 05-31-94   6:22a
	MWAVMGR  DL_      9569 05-31-94   6:22a
	MWAVSCAN DL_     70797 05-31-94   6:22a
	MWAVSOS  DL_      3983 05-31-94   6:22a
	MWAVTSR  EX_      8445 05-31-94   6:22a
	MWBACKF  DL_      6956 05-31-94   6:22a
	MWBACKUP EX_    159943 05-31-94   6:22a
	MWBACKUP HL_    141281 05-31-94   6:22a
	MWGRAFIC DL_     18094 05-31-94   6:22a
	MWUNDEL  EX_     66012 05-31-94   6:22a
	MWUNDEL  HL_     17458 05-31-94   6:22a
	UNDELETE EXE     26416 05-31-94   6:22a
	VSAFE    CO_     33046 05-31-94   6:22a
	WNTOOLS  GR_      1071 05-31-94   6:22a
	       29 file(s)    1433341 bytes

	Total files listed:
	       29 file(s)    1433341 bytes
	                       17920 bytes free

### Directory of MS-DOS 6.22 (1.44M Supp Disk)

	 Volume in drive A is SUPPDISK  1
	 Volume Serial Number is 5B0A-1710

	Directory of A:\

	ADOS     CFG        61 05-31-94   6:22a
	ADOS     CO_     17911 05-31-94   6:22a
	ADOS     OV_     45289 05-31-94   6:22a
	ADOS     TX_     40535 05-31-94   6:22a
	AM       EXE      7825 05-31-94   6:22a
	AREADME  TX_     12280 05-31-94   6:22a
	FAKEMOUS COM       307 05-31-94   6:22a
	DRVBOOT  BA_      1277 05-31-94   6:22a
	DVORAK   SY_      1779 05-31-94   6:22a
	DVORAK   TX_      3215 05-31-94   6:22a
	KBDBUF   SYS      1140 05-31-94   6:22a
	ISO      CP_     15240 05-31-94   6:22a
	ISO      TXT      2761 05-31-94   6:22a
	ASSIGN   CO_      4547 05-31-94   6:22a
	BACKUP   EX_     22966 05-31-94   6:22a
	COMP     EX_      8738 05-31-94   6:22a
	CV       COM       716 05-31-94   6:22a
	EDLIN    EXE     12674 05-31-94   6:22a
	EXE2BIN  EX_      5983 05-31-94   6:22a
	GRAFTABL CO_      6078 05-31-94   6:22a
	JOIN     EX_     12237 05-31-94   6:22a
	4201     CP_      2399 05-31-94   6:22a
	4208     CP_       359 05-31-94   6:22a
	5202     CP_       260 05-31-94   6:22a
	LCD      CP_      2793 05-31-94   6:22a
	MIRROR   CO_     11424 05-31-94   6:22a
	MSHERC   CO_      4086 05-31-94   6:22a
	PRINTER  SY_     10961 05-31-94   6:22a
	PRINTFIX COM       234 05-31-94   6:22a
	GORILLA  BA_     10439 05-31-94   6:22a
	REMLINE  BA_      4435 05-31-94   6:22a
	NIBBLES  BA_      7182 05-31-94   6:22a
	MONEY    BA_     13049 05-31-94   6:22a
	COMMANDS TX_     25400 05-31-94   6:22a
	SETUP    BAT     13208 05-31-94   6:22a
	SD6COPY  BAT       758 05-31-94   6:22a
	CHOICE   COM      1754 05-31-94   6:22a
	EXPAND   EXE     16129 05-31-94   6:22a
	GET_FUNC COM        24 05-31-94   6:22a
	NET      1X_      4704 05-31-94   6:22a
	NET      TX_      2656 05-31-94   6:22a
	NETBEUI  DO_     21122 05-31-94   6:22a
	NETWKSTA 1X_     38186 05-31-94   6:22a
	NETWKSTA 2X_     60768 05-31-94   6:22a
	REDIR    1X_     19627 05-31-94   6:22a
	REDIR    2X_     20033 05-31-94   6:22a
	SETNAME  EX_      3131 05-31-94   6:22a
	8514     VI_      6421 05-31-94   6:22a
	CGA      GR_      1617 05-31-94   6:22a
	CGA      IN_      2775 05-31-94   6:22a
	CGA      VI_      6131 05-31-94   6:22a
	DOSSHELL CO_      1907 05-31-94   6:22a
	DOSSHELL EX_    142511 05-31-94   6:22a
	DOSSHELL HL_     48773 05-31-94   6:22a
	DOSSWAP  EX_     13498 05-31-94   6:22a
	EGA      GR_      2466 05-31-94   6:22a
	EGA      IN_      2776 05-31-94   6:22a
	EGA      SY_      3684 05-31-94   6:22a
	EGA      VI_      6160 05-31-94   6:22a
	EGAMONO  GR_      2318 05-31-94   6:22a
	HERC     GR_      1636 05-31-94   6:22a
	HERC     VI_      6271 05-31-94   6:22a
	MONO     GR_       296 05-31-94   6:22a
	MONO     IN_      2451 05-31-94   6:22a
	VGA      GR_      3198 05-31-94   6:22a
	VGA      VI_      6355 05-31-94   6:22a
	VGAMONO  GR_      3214 05-31-94   6:22a
	720ID01  BAT       109 05-31-94   6:22a
	720ID02  BAT       109 05-31-94   6:22a
	       69 file(s)     783356 bytes

	Total files listed:
	       69 file(s)     783356 bytes
	                      655360 bytes free
